<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#888888"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:id="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="50sp"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textColor="#44ff00"
        android:textAlignment="center"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:id="@+id/textView6"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textSize="25sp"
        android:textColor="#44ff00"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/halfmin"
            android:id="@+id/radioButton"
            android:textColor="#000000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onemin"
            android:id="@+id/radioButton2"
            android:textColor="#000000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/twomin"
            android:id="@+id/radioButton3"
            android:textColor="#000000" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:id="@+id/textView5"
        android:textStyle="bold|italic"
        android:textColor="#44ff00"
        android:textSize="25sp"
        android:typeface="serif"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/radioGroup"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/radioGroup2"
        android:layout_below="@+id/textView5"
        android:layout_alignLeft="@+id/radioGroup"
        android:layout_alignStart="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fourXfive"
            android:id="@+id/radioButton4"
            android:textColor="#000000" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiveXsix"
            android:id="@+id/radioButton5"
            android:textColor="#000000" />
    </RadioGroup>

</RelativeLayout>