<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="#888888">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scores"
        android:id="@+id/textView2"
        android:background="#888888"
        android:textColor="#44ff00"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_weight="0"
        android:textStyle="bold|italic"
        android:typeface="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:background="#888888"
        android:textSize="25sp"
        android:textColor="#44ff00"
        android:text="@string/board4x5"
        android:typeface="serif"
        android:textStyle="bold|italic"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:background="#888888"
        android:textSize="25sp"
        android:textColor="#44ff00"
        android:layout_weight="0"
        android:text="@string/board5x6"
        android:textStyle="bold|italic"
        android:typeface="serif"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView11"
        android:background="#888888"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_weight="0" />

</LinearLayout>